Se agregaron nuevas funcionalidades:
1.Se agrego un login
2.Modifico la base de datos agregan la tabla usuarios
3.Agregao funcionalidad de el boton sin acavar
4.Se agrega la funcionalidad de cerrar sesion
5.Se agrega la funcionalidad a los botones de salida

--- a/Recuerdos/Recuerdos/Recuerdos.csproj
+++ b/Recuerdos/Recuerdos/Recuerdos.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Vista\crearSueñosRecuerdos.Designer.cs">
       <DependentUpon>crearSueñosRecuerdos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Ingreso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Ingreso.Designer.cs">
+      <DependentUpon>Ingreso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Recuerdos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +71,9 @@
     <Compile Include="Utilidades\Conexion.cs" />
     <EmbeddedResource Include="Vista\crearSueñosRecuerdos.resx">
       <DependentUpon>crearSueñosRecuerdos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Ingreso.resx">
+      <DependentUpon>Ingreso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Recuerdos.resx">
       <DependentUpon>Recuerdos.cs</DependentUpon>
