cambios y adaptaciones relacionados con cambio BD:
1.Modificaciones a BD
2.Adaptacion de objetos con base a modificaciones hechas en BD
3.Adaptacion de clase conexion con base a modificaciones hechas en BD
4.Adaptacion de vista Recuerdos con base a modificaciones hechas en BD
4.1.Cambio de logica en la creacion de nodos (los tags guardan su padre
inmediato) , todo lo relacionado con tags cambia
5.Adaptacion de vista Ingreso con base a modificaciones hechas en BD
6.se comento to
7.Se agrega la clase usuario objeto de usuarios en la base de datos.
8.Se cambian nombre de archivo y derectorio por sueno y recuerdo
respectivamente
fixes #1

--- a/Recuerdos/Recuerdos/Recuerdos.csproj
+++ b/Recuerdos/Recuerdos/Recuerdos.csproj
@@ -46,8 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modelo\Archivo.cs" />
-    <Compile Include="Modelo\Directorio.cs" />
+    <Compile Include="Modelo\Sueno.cs" />
+    <Compile Include="Modelo\Recuerdo.cs" />
+    <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="Vista\crearSueñosRecuerdos.cs">
       <SubType>Form</SubType>
     </Compile>
