--- a/Recuerdos/Recuerdos/Recuerdos.csproj
+++ b/Recuerdos/Recuerdos/Recuerdos.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Modelo\Sueno.cs" />
     <Compile Include="Modelo\Recuerdo.cs" />
     <Compile Include="Modelo\Usuario.cs" />
+    <Compile Include="Utilidades\Validaciones.cs" />
     <Compile Include="Vista\crearSueñosRecuerdos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +71,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilidades\Conexion.cs" />
+    <Compile Include="Vista\Registro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Registro.Designer.cs">
+      <DependentUpon>Registro.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Vista\crearSueñosRecuerdos.resx">
       <DependentUpon>crearSueñosRecuerdos.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +95,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vista\Registro.resx">
+      <DependentUpon>Registro.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
