Se trabajo sobre las siguiente funcionalidades:
1-Ingreso de emoticon por medio de lineas de texto.
2-guardado de texto RTF para la restauracion de estilos con la BD

fixes #4

--- a/Recuerdos/Recuerdos/Recuerdos.csproj
+++ b/Recuerdos/Recuerdos/Recuerdos.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Modelo\Sueno.cs" />
     <Compile Include="Modelo\Recuerdo.cs" />
     <Compile Include="Modelo\Usuario.cs" />
+    <Compile Include="Utilidades\HotKeyRegister.cs" />
+    <Compile Include="Utilidades\KeyModifiers.cs" />
     <Compile Include="Utilidades\Validaciones.cs" />
     <Compile Include="Vista\crearSueñosRecuerdos.cs">
       <SubType>Form</SubType>
